# SRD-Monitor

./: CMakeLists.txt  README.md  data_analysis.py
src/: MainWindow.cpp  MainWindow.h
